--- a/django/src/core/templates/core/search.html
+++ b/django/src/core/templates/core/search.html
@@ -14,6 +14,6 @@
 </script>
 <link rel="stylesheet" type="text/css" href="{% static "core/js/dist/search.css" %}">
 {#<script src="{% static "/js/search.js" %}"></script>#}
-<script src="{% script "/js/search.js" %}"></script>
+<script src="{% static_or_webpack_dev "/js/search.js" %}"></script>
 </body>
 </html>
