--- a/django/src/core/templates/core/index.html
+++ b/django/src/core/templates/core/index.html
@@ -5,6 +5,19 @@
     <meta charset="UTF-8">
     <title>Browse</title>
     <style>
+
+        @font-face {
+            font-family: 'MochiyPop';
+            src: local('MochiyPop'),
+                 url('{% static 'core/fonts/MochiyPopPOne-Regular.ttf' %} ');
+        }
+
+        h2 {
+            font-family: MochiyPop;
+            font-size: 1.9em;
+            color: #3a3a3a;
+        }
+
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";;
         }
@@ -18,7 +31,7 @@
         .dashBox {
             flex: 1;
             width: 175px;
-            border: 0.3em solid #e3e3e3;
+            border: 0.3em solid #ebe1ff;
             border-radius: 1em;
             justify-content: center;
             padding: 20px;
