--- a/django/src/core/templates/core/base.html
+++ b/django/src/core/templates/core/base.html
@@ -18,6 +18,20 @@
                 display: flex;
                 justify-content: space-between;
                 margin-bottom: 10px;
+                border-bottom: 0.06em solid #2b2b2b;
+            }
+            .left {
+                display: flex;
+                flex: 1;
+            }
+            .center {
+                text-align: center;
+                align-self: center;
+                font-family: MochiyPop;
+                margin: 4px 0px 9px 0px;
+                font-size: 21px;
+                color: white;
+                flex: 1;
             }
             .right {
                 flex-direction: column;
@@ -26,20 +40,8 @@
                 display: flex;
                 padding: 0px 6px 3px 0px;
                 align-items: baseline;
+                flex: 1;
             }
-            .center {
-                align-self: center;
-                font-family: MochiyPop;
-                margin: 4px 0px 9px 0px;
-                font-size: 22px;
-                color: white;
-            }
-
-            .left {
-                display: flex;
-            }
-
-            
         </style>
     </head>
     <body>
@@ -48,8 +50,8 @@
             <div class="center">tidy-inventory</div>
             <div class="right">
                 {% if user.is_authenticated %}
-                    <div>Welcome, {{ user.username }}</div>
-                    <div>
+                    <div style="align-self: end;">Welcome, {{ user.username }}</div>
+                    <div style="margin-top: -4px;align-self: end">
                         <a href="{% url 'logout' %}">Logout</a>
                     </div>
                 {% else %}
