base template for transit page and title now is a home hyperlink

--- a/django/src/core/templates/core/index.html
+++ b/django/src/core/templates/core/index.html
@@ -133,7 +133,7 @@
                         </a>
                     </div>
                     <div>
-                        Administrate
+                        Data Entry
                     </div>
                 </div>
             </div>
