--- a/django/src/core/templates/core/base.html
+++ b/django/src/core/templates/core/base.html
@@ -24,6 +24,17 @@
                 display: flex;
                 flex: 1;
             }
+
+            .center a {
+                color: white !important;
+                text-decoration: none;
+            }
+
+            .center a:hover {
+                color: white !important;
+                text-decoration: none;
+            }
+
             .center {
                 text-align: center;
                 align-self: center;
@@ -47,7 +58,7 @@
     <body>
         <div class="banner">
             <div class="left"></div>
-            <div class="center">tidy-inventory</div>
+            <div class="center"><a href="/">tidy-inventory</a></div>
             <div class="right">
                 {% if user.is_authenticated %}
                     <div style="align-self: end;">Welcome, {{ user.username }}</div>
