--- a/django/src/core/templates/core/transit.html
+++ b/django/src/core/templates/core/transit.html
@@ -1,20 +1,16 @@
-<html lang="en">
+{% extends "core/base.html" %}
 {% load static %}
 {% load extra_tags %}
-<head>
-    {#<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">#}
+{% block head %}
     <meta charset="UTF-8">
     <title>Transit</title>
-</head>
+    {% endblock head%}
 
-<body>
+{% block content %}
     {% csrf_token %}
     <div id="root"></div>
     <script>
         var initialState = {{ initialState| safe}};
     </script>
-{#<script src="{% static "/js/transit.js" %}"></script>#}
 <script src="{% static_or_webpack_dev "/js/transit.js" %}"></script>
-</body>
-
-</html>
+{% endblock content %}
