--- a/django/src/core/templates/registration/login.html
+++ b/django/src/core/templates/registration/login.html
@@ -1,36 +1,38 @@
 {% extends "core/base.html" %}
-
+{% load static %}
+{% block head %}
+    <link rel="stylesheet"
+          type="text/css"
+          href="{% static "core/scss/search.css" %}"/>
+    <title>Login</title>
+{% endblock %}
 {% block content %}
-
-{% if form.errors %}
-<p>Your username and password didn't match. Please try again.</p>
-{% endif %}
-
-{% if next %}
-    {% if user.is_authenticated %}
-    <p>Your account doesn't have access to this page. To proceed,
-    please login with an account that has access.</p>
-    {% else %}
-    <p>Please login to see this page.</p>
+    <div style="margin:0 auto;width:50%;text-align:center;">
+    {% if form.errors %}<p>Your username and password didn't match. Please try again.</p>{% endif %}
+    {% if next %}
+        {% if user.is_authenticated %}
+            <p>
+                Your account doesn't have access to this page. To proceed,
+                please login with an account that has access.
+            </p>
+        {% else %}
+            <p>Please login to see this page.</p>
+        {% endif %}
     {% endif %}
-{% endif %}
-
-<form method="post" action="{% url 'login' %}">
-{% csrf_token %}
-<table>
-<tr>
-    <td>{{ form.username.label_tag }}</td>
-    <td>{{ form.username }}</td>
-</tr>
-<tr>
-    <td>{{ form.password.label_tag }}</td>
-    <td>{{ form.password }}</td>
-</tr>
-</table>
-
-<input type="submit" value="login">
-<input type="hidden" name="next" value="{{ next }}">
-</form>
-
-
+        <form method="post" action="{% url 'login' %}">
+            {% csrf_token %}
+            <table style="margin: 0 auto;">
+                <tr>
+                    <td>{{ form.username.label_tag }}</td>
+                    <td>{{ form.username }}</td>
+                </tr>
+                <tr>
+                    <td>{{ form.password.label_tag }}</td>
+                    <td>{{ form.password }}</td>
+                </tr>
+            </table>
+            <input type="submit" value="login" class="mt-2" >
+            <input type="hidden" name="next" value="{{ next }}">
+        </form>
+    </div>
 {% endblock %}
