--- a/django/src/core/templates/core/search.html
+++ b/django/src/core/templates/core/search.html
@@ -9,8 +9,9 @@
     {% csrf_token %}
     <div id="root"></div>
     <script>var initialState = {{initialState|safe}};</script>
-    <link rel="stylesheet"
+    <!-- is this for production? -->
+    <!-- <link rel="stylesheet"
           type="text/css"
-          href="{% static "core/js/dist/search.css" %}"/>
-    <script src="{% static_or_webpack_dev "/js/search.js" %}"></script>
+          href="{% static "core/scss/search.css" %}"/> -->
+    <script src="{% static_or_webpack_dev "js/search.js" %}"></script>
 {% endblock content %}
