tweaks before production

--- a/django/src/core/templates/admin/base_site.html
+++ b/django/src/core/templates/admin/base_site.html
@@ -25,4 +25,7 @@
     }
     </style>
 {% endblock %}
-{% block branding %}<div class="logo"><a href="/">tidy-inventory</a></div>{% endblock %}
+{% block branding %}
+<div class="logo"><a href="/">tidy-inventory</a></div>
+
+{% endblock %}
