url paths correction to support both production static files and dev js server

--- a/django/src/core/templates/core/search.html
+++ b/django/src/core/templates/core/search.html
@@ -13,5 +13,5 @@
     <!-- <link rel="stylesheet"
           type="text/css"
           href="{% static "core/scss/search.css" %}"/> -->
-    <script src="{% static_or_webpack_dev "js/search.js" %}"></script>
+    <script src="{% static_or_webpack_dev "search.js" %}"></script>
 {% endblock content %}
