--- a/django/src/core/templates/core/transit.html
+++ b/django/src/core/templates/core/transit.html
@@ -12,5 +12,5 @@
     <script>
         var initialState = {{ initialState| safe}};
     </script>
-<script src="{% static_or_webpack_dev "js/transit.js" %}"></script>
+<script src="{% static_or_webpack_dev "transit.js" %}"></script>
 {% endblock content %}
